Vishal Updated Files

--- a/jainDataBase/gatha/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/index.html
+++ b/jainDataBase/gatha/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/index.html
@@ -164,7 +164,7 @@
 <br><div class=title id=gatha-1-12><span class=incFontSz>+ </span><a href=#index>﻿Characteristic of a real or entire thing or a thing in its integral whole</a><span class=decFontSz> -</span></div><div class=gatha>﻿दव्वं पज्जवविउयं, दव्वविउत्ता य पज्जवा णत्थि ।<br>उप्पाय-ट्ठिइ-भंगा, हंदि दवियलक्खणं एयं ॥12॥</div>
 <hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-1-13><span class=incFontSz>+ </span><a href=#index>﻿In the following verse the author explains as to how both these Nayas become wrong in their exclusive assertions --</a><span class=decFontSz> -</span></div><div class=gatha>﻿These three characteristics of birth, decay and stability must dwell together in harmony to make a real definition of a thing in its integral form. Each Naya therefore, if taken independently, isolated from the other, can never yield an adequate idea of Sat an entity. Both these, therefore, divorced from each other, are wrong in their standpoints.</div>
+<br><div class=title id=gatha-1-13><span class=incFontSz>+ </span><a href=#index>﻿In the following verse the author explains as to how both these Nayas become wrong in their exclusive assertions --</a><span class=decFontSz> -</span></div><div class=gatha>﻿एए पुण संगहओ पाडिक्कमलक्खणं दुवेण्हं पि ।<br>तम्हा मिच्छद्दिट्ठी पत्तेयं दो वि मूलणया ॥13॥</div>
 <hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-1-14><span class=incFontSz>+ </span><a href=#index>﻿How and when both the Nayas can be regarded as right --</a><span class=decFontSz> -</span></div><div class=gatha>﻿ण य तइयो अस्थि णओ ण य सम्मत्तं ण तेसु पडिपुण्णं ।<br>जेण दुवे एगन्ता विभजमाणा अणेगन्तो ॥14॥</div>
