--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-13.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-13.html
@@ -47,7 +47,7 @@
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-12.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-14.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-13><span class=incFontSz>+ </span><a href=#index>
 ﻿In the following verse the author explains as to how both these Nayas become wrong in their exclusive assertions --</a><span class=decFontSz> -</span></div>
-   <div class=gatha>﻿These three characteristics of birth, decay and stability must dwell together in harmony to make a real definition of a thing in its integral form. Each Naya therefore, if taken independently, isolated from the other, can never yield an adequate idea of Sat an entity. Both these, therefore, divorced from each other, are wrong in their standpoints.</div>
-    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿एए पुण संगहओ पाडिक्कमलक्खणं दुवेण्हं पि ।<br>तम्हा मिच्छद्दिट्ठी पत्तेयं दो वि मूलणया ॥13॥</div>
+   <div class=gatha>﻿एए पुण संगहओ पाडिक्कमलक्खणं दुवेण्हं पि ।<br>तम्हा मिच्छद्दिट्ठी पत्तेयं दो वि मूलणया ॥13॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿These three characteristics of birth, decay and stability must dwell together in harmony to make a real definition of a thing in its integral form. Each Naya therefore, if taken independently, isolated from the other, can never yield an adequate idea of Sat an entity. Both these, therefore, divorced from each other, are wrong in their standpoints.</div>
   </body>
 </html>
