--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-34.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-34.html
@@ -48,6 +48,6 @@
     <a href='1-33.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-35.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-34><span class=incFontSz>+ </span><a href=#index>
 ﻿Clear distinction between Vyanjana Paryaya and Artha Paryaya --</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿वंजणपज्जायस्स उ 'पुरिसो' 'पुरिसो' त्ति णिच्चमवियप्पो ।<br>बालाइवियप्पं पुण पासई से अत्थपज्जाओ ॥34॥</div>
-    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿To a man who looks from Vyanjana Paryaya point of view, a man-variation appears to be one, without any particular, simply a man. If, however, he looks at the subvariations of a boy,' 'a youth' etc.' it means he is looking from an Artha Paryaya point of view.</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿To a man who looks from Vyanjana Paryaya point of view, a man-variation appears to be one, without any particular, simply a man. If, however, he looks at the subvariations of 'a boy', 'a youth' etc. it means he is looking from an Artha Paryaya point of view.</div>
   </body>
 </html>
